fixed color of demo log in button and spacing in drop down menu

--- a/app/assets/stylesheets/components/_nav-bar.scss
+++ b/app/assets/stylesheets/components/_nav-bar.scss
@@ -49,7 +49,7 @@
   height: 16px;
 }
 // this may be a duplicate of the above
-.dropdown-content a {
+.dropdown-content a, .dropdown-content button {
     display: block;
     text-transform: none;
 }
@@ -69,7 +69,6 @@
   text-align: center;
   border: none;
   font-size: 14px;
-  color: black;
 }
 
 .dropdown-content > button {
